--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 /* GENERAL */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   max-width: 50rem;
   margin: 0 auto;
@@ -13,11 +18,11 @@ body {
 .main-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-row-gap: 1px;
 }
 
 .main-grid-item {
-  padding-right: 1rem;
+  padding: 1rem;
+  /* padding-right: 1rem; */
   border-top: 1px solid #000;
 }
 
@@ -40,7 +45,9 @@ body {
 }
 
 .sub-sub-grid-item {
-  
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  padding-right: 1rem;
 }
 
 .technical-grid-item {
@@ -61,3 +68,24 @@ body {
   grid-column-end: span 4;
 }
 
+/* HEADER */
+
+.contact {
+  display: flex;
+  align-items: center;
+}
+
+/* EXPERIENCE SECTION */
+
+.employment-header {
+  margin-bottom: 1rem;
+}
+
+.employer-name {
+  display: inline;
+}
+
+.employment-dates {
+  float: right;
+  margin-right: 1rem;
+}
